# task-app

./: .gitignore  PR_DESCRIPTION.md  README.md  consolidated_migration.sql  d1_schema.sql  full_schema.sql  package-lock.json  package.json  populate_data.sh  seed_test_data.sql  system.md  wrangler.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.gemini/: settings.json
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  Dockerfile.lambda  deploy.sh  wrangler.toml
backend/migrations/: 20260215000000_init.sql  20260215000001_auth_and_reports.sql  20260215000002_tags_and_logs.sql  20260215000003_multi_tenant.sql  20260215000004_log_indexes.sql  20260215000005_notifications.sql  20260215000006_task_time_logs.sql  20260215000007_display_groups.sql  20260223000000_email_verification.sql  20260224000000_add_pending_email.sql  20260225000000_fix_duration_rounding.sql  20260226000000_add_password_resets.sql
backend/src/: db.rs  email.rs  lib.rs  main.rs  middleware.rs  models.rs  utils.rs
backend/src/handlers/: analytics.rs  auth.rs  groups.rs  invitations.rs  logs.rs  mod.rs  notifications.rs  reports.rs  tasks.rs  users.rs  ws.rs
backend/tests/: api_tests.rs
docs/: production_deployment_roadmap.md  production_deployment_roadmap_simple.md  requirements.md  system_design.md  technical_spec.md  todo.md
docs/archive/: activity_log_improvement_plan.md  auth_and_report_plan.md  implementation_plan.md  improvement_proposal.md  multi_tenant_plan.md  risk_mitigation_plan.md  ux_interaction.md
frontend/: .env  .env.example  package-lock.json  package.json  svelte.config.js  tailwind.config.js  wrangler.toml
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  auth.ts  taskUtils.test.ts  taskUtils.ts  theme.ts  types.ts  utils.test.ts  utils.ts  websocket.ts
frontend/src/lib/components/: ActivityLogModal.svelte  DailyReportModal.svelte  DisplayGroupModal.svelte  InteractionLayer.svelte  Login.svelte  MemberRow.svelte  NowLine.svelte  ProfileModal.svelte  ReportListModal.svelte  ReportPreview.svelte  TaskBar.svelte  TaskEditModal.svelte  (+5 more)
frontend/src/routes/: +layout.svelte  +page.svelte
(+12 files in other folders)
