[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros", "ws"] }
futures = "0.3"
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono", "derive", "migrate", "macros"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
uuid = { version = "1.11.0", features = ["v4"] }
async-trait = "0.1.89"
envy = "0.4.2"
regex = "1.11.1"
lambda_http = "1.0.2"
tower = { version = "0.5.2", features = ["util"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-sesv2 = "1.1.0"

[dev-dependencies]
axum-test = "17"
