[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
uuid = { version = "1.11.0", features = ["v4", "js"] }
async-trait = "0.1.89"
regex = "1.11.1"
worker = { version = "0.7.4", features = ["d1", "http"] }
console_error_panic_hook = "0.1.7"
urlencoding = "2.1.3"
